test/spec_vectors/simd_f32x4/fail/module_12.wat
(module (func $f32x4.abs-arg-empty (result v128) (f32x4.abs)))